# pt

./: Cargo.toml  README.md  install.ps1  install.sh
src/: app.rs  claude.rs  detect.rs  hook.rs  main.rs  rewrite.rs  setup.rs  ui.rs
