[package]
name = "pt"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A TUI for refining prompts before sending them to Claude"

[[bin]]
name = "pt"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tui-textarea = "0.7"
tokio = { version = "1", features = ["full"] }
arboard = "3"
serde_json = "1"
dirs = "6"
